source/stlgrammar/stlgrammarParser.py
# Generated from stlgrammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class stlgrammarParser ( Parser ):

    grammarFileName = "stlgrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'U'", "'('", "')'", "'[t]'", "'['", "','", 
                     "']'", "'->'", "'and'", "'or'", "'INF'", "<INVALID>", 
                     "'G'", "'F'", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Bool", "ALWAYS", "EVENTUALLY", "MUL", "DIV", "ADD", 
                      "SUB", "OP_EE", "OP_NE", "OP_LT", "OP_LEQ", "OP_GT", 
                      "OP_GEQ", "NOT", "ID", "INT", "NL", "WS" ]

    RULE_prog = 0
    RULE_stlFormula = 1
    RULE_signalComp = 2
    RULE_signal = 3
    RULE_timeSlice = 4
    RULE_implies = 5
    RULE_expr = 6
    RULE_signalValue = 7
    RULE_relOp = 8
    RULE_andorOp = 9
    RULE_signalID = 10
    RULE_start_t = 11
    RULE_end_t = 12

    ruleNames =  [ "prog", "stlFormula", "signalComp", "signal", "timeSlice", 
                   "implies", "expr", "signalValue", "relOp", "andorOp", 
                   "signalID", "start_t", "end_t" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    Bool=12
    ALWAYS=13
    EVENTUALLY=14
    MUL=15
    DIV=16
    ADD=17
    SUB=18
    OP_EE=19
    OP_NE=20
    OP_LT=21
    OP_LEQ=22
    OP_GT=23
    OP_GEQ=24
    NOT=25
    ID=26
    INT=27
    NL=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stlFormula(self):
            return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,0)


        def EOF(self):
            return self.getToken(stlgrammarParser.EOF, 0)

        def getRuleIndex(self):
            return stlgrammarParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = stlgrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.stlFormula(0)
            self.state = 27
            self.match(stlgrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StlFormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_stlFormula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StlGlobalFormulaContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self):
            return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,0)

        def timeSlice(self):
            return self.getTypedRuleContext(stlgrammarParser.TimeSliceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlGlobalFormula" ):
                listener.enterStlGlobalFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlGlobalFormula" ):
                listener.exitStlGlobalFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlGlobalFormula" ):
                return visitor.visitStlGlobalFormula(self)
            else:
                return visitor.visitChildren(self)


    class StlSignalContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signal(self):
            return self.getTypedRuleContext(stlgrammarParser.SignalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlSignal" ):
                listener.enterStlSignal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlSignal" ):
                listener.exitStlSignal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlSignal" ):
                return visitor.visitStlSignal(self)
            else:
                return visitor.visitChildren(self)


    class StlFormulaImpliesContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlgrammarParser.StlFormulaContext)
            else:
                return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,i)

        def implies(self):
            return self.getTypedRuleContext(stlgrammarParser.ImpliesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlFormulaImplies" ):
                listener.enterStlFormulaImplies(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlFormulaImplies" ):
                listener.exitStlFormulaImplies(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlFormulaImplies" ):
                return visitor.visitStlFormulaImplies(self)
            else:
                return visitor.visitChildren(self)


    class StlEventualFormulaContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self):
            return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,0)

        def timeSlice(self):
            return self.getTypedRuleContext(stlgrammarParser.TimeSliceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlEventualFormula" ):
                listener.enterStlEventualFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlEventualFormula" ):
                listener.exitStlEventualFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlEventualFormula" ):
                return visitor.visitStlEventualFormula(self)
            else:
                return visitor.visitChildren(self)


    class StlParensContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self):
            return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlParens" ):
                listener.enterStlParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlParens" ):
                listener.exitStlParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlParens" ):
                return visitor.visitStlParens(self)
            else:
                return visitor.visitChildren(self)


    class StlSignalCompContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signalComp(self):
            return self.getTypedRuleContext(stlgrammarParser.SignalCompContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlSignalComp" ):
                listener.enterStlSignalComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlSignalComp" ):
                listener.exitStlSignalComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlSignalComp" ):
                return visitor.visitStlSignalComp(self)
            else:
                return visitor.visitChildren(self)


    class StlUntilFormulaContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlgrammarParser.StlFormulaContext)
            else:
                return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,i)

        def timeSlice(self):
            return self.getTypedRuleContext(stlgrammarParser.TimeSliceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlUntilFormula" ):
                listener.enterStlUntilFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlUntilFormula" ):
                listener.exitStlUntilFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlUntilFormula" ):
                return visitor.visitStlUntilFormula(self)
            else:
                return visitor.visitChildren(self)


    class StlPropContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Bool(self):
            return self.getToken(stlgrammarParser.Bool, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlProp" ):
                listener.enterStlProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlProp" ):
                listener.exitStlProp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlProp" ):
                return visitor.visitStlProp(self)
            else:
                return visitor.visitChildren(self)


    class StlConjDisjFormulaContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stlFormula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlgrammarParser.StlFormulaContext)
            else:
                return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,i)

        def andorOp(self):
            return self.getTypedRuleContext(stlgrammarParser.AndorOpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlConjDisjFormula" ):
                listener.enterStlConjDisjFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlConjDisjFormula" ):
                listener.exitStlConjDisjFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlConjDisjFormula" ):
                return visitor.visitStlConjDisjFormula(self)
            else:
                return visitor.visitChildren(self)


    class StlNotFormulaContext(StlFormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.StlFormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(stlgrammarParser.NOT, 0)
        def stlFormula(self):
            return self.getTypedRuleContext(stlgrammarParser.StlFormulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlNotFormula" ):
                listener.enterStlNotFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlNotFormula" ):
                listener.exitStlNotFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStlNotFormula" ):
                return visitor.visitStlNotFormula(self)
            else:
                return visitor.visitChildren(self)



    def stlFormula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = stlgrammarParser.StlFormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_stlFormula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = stlgrammarParser.StlNotFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 30
                self.match(stlgrammarParser.NOT)
                self.state = 31
                self.match(stlgrammarParser.T__1)
                self.state = 32
                self.stlFormula(0)
                self.state = 33
                self.match(stlgrammarParser.T__2)
                pass

            elif la_ == 2:
                localctx = stlgrammarParser.StlGlobalFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 35
                self.match(stlgrammarParser.ALWAYS)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==stlgrammarParser.T__4:
                    self.state = 36
                    self.timeSlice()


                self.state = 39
                self.match(stlgrammarParser.T__1)
                self.state = 40
                self.stlFormula(0)
                self.state = 41
                self.match(stlgrammarParser.T__2)
                pass

            elif la_ == 3:
                localctx = stlgrammarParser.StlEventualFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 43
                self.match(stlgrammarParser.EVENTUALLY)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==stlgrammarParser.T__4:
                    self.state = 44
                    self.timeSlice()


                self.state = 47
                self.match(stlgrammarParser.T__1)
                self.state = 48
                self.stlFormula(0)
                self.state = 49
                self.match(stlgrammarParser.T__2)
                pass

            elif la_ == 4:
                localctx = stlgrammarParser.StlSignalCompContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.signalComp()
                pass

            elif la_ == 5:
                localctx = stlgrammarParser.StlSignalContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.signal()
                pass

            elif la_ == 6:
                localctx = stlgrammarParser.StlPropContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(stlgrammarParser.Bool)
                pass

            elif la_ == 7:
                localctx = stlgrammarParser.StlParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.match(stlgrammarParser.T__1)
                self.state = 55
                self.stlFormula(0)
                self.state = 56
                self.match(stlgrammarParser.T__2)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 73
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = stlgrammarParser.StlFormulaImpliesContext(self, stlgrammarParser.StlFormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_stlFormula)
                        self.state = 60
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 61
                        self.implies()
                        self.state = 62
                        self.stlFormula(11)
                        pass

                    elif la_ == 2:
                        localctx = stlgrammarParser.StlConjDisjFormulaContext(self, stlgrammarParser.StlFormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_stlFormula)
                        self.state = 64
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 65
                        self.andorOp()
                        self.state = 66
                        self.stlFormula(10)
                        pass

                    elif la_ == 3:
                        localctx = stlgrammarParser.StlUntilFormulaContext(self, stlgrammarParser.StlFormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_stlFormula)
                        self.state = 68
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 69
                        self.match(stlgrammarParser.T__0)
                        self.state = 70
                        self.timeSlice()
                        self.state = 71
                        self.stlFormula(9)
                        pass

             
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class SignalCompContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_signalComp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SignalExprContext(SignalCompContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.SignalCompContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signal(self):
            return self.getTypedRuleContext(stlgrammarParser.SignalContext,0)

        def relOp(self):
            return self.getTypedRuleContext(stlgrammarParser.RelOpContext,0)

        def expr(self):
            return self.getTypedRuleContext(stlgrammarParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalExpr" ):
                listener.enterSignalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalExpr" ):
                listener.exitSignalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalExpr" ):
                return visitor.visitSignalExpr(self)
            else:
                return visitor.visitChildren(self)


    class SignalBoolContext(SignalCompContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.SignalCompContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Bool(self):
            return self.getToken(stlgrammarParser.Bool, 0)
        def relOp(self):
            return self.getTypedRuleContext(stlgrammarParser.RelOpContext,0)

        def signal(self):
            return self.getTypedRuleContext(stlgrammarParser.SignalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalBool" ):
                listener.enterSignalBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalBool" ):
                listener.exitSignalBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalBool" ):
                return visitor.visitSignalBool(self)
            else:
                return visitor.visitChildren(self)



    def signalComp(self):

        localctx = stlgrammarParser.SignalCompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_signalComp)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = stlgrammarParser.SignalExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.signal()
                self.state = 79
                self.relOp()
                self.state = 80
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = stlgrammarParser.SignalExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.relOp()
                self.state = 84
                self.signal()
                pass

            elif la_ == 3:
                localctx = stlgrammarParser.SignalBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.match(stlgrammarParser.Bool)
                self.state = 87
                self.relOp()
                self.state = 88
                self.signal()
                pass

            elif la_ == 4:
                localctx = stlgrammarParser.SignalBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.signal()
                self.state = 91
                self.relOp()
                self.state = 92
                self.match(stlgrammarParser.Bool)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_signal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SignalNameContext(SignalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.SignalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def signalID(self):
            return self.getTypedRuleContext(stlgrammarParser.SignalIDContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalName" ):
                listener.enterSignalName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalName" ):
                listener.exitSignalName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignalName" ):
                return visitor.visitSignalName(self)
            else:
                return visitor.visitChildren(self)



    def signal(self):

        localctx = stlgrammarParser.SignalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_signal)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = stlgrammarParser.SignalNameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.signalID()
                self.state = 97
                self.match(stlgrammarParser.T__3)
                pass

            elif la_ == 2:
                localctx = stlgrammarParser.SignalNameContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.signalID()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TimeSliceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_timeSlice

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TimerangeContext(TimeSliceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.TimeSliceContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def start_t(self):
            return self.getTypedRuleContext(stlgrammarParser.Start_tContext,0)

        def end_t(self):
            return self.getTypedRuleContext(stlgrammarParser.End_tContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimerange" ):
                listener.enterTimerange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimerange" ):
                listener.exitTimerange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimerange" ):
                return visitor.visitTimerange(self)
            else:
                return visitor.visitChildren(self)



    def timeSlice(self):

        localctx = stlgrammarParser.TimeSliceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_timeSlice)
        try:
            localctx = stlgrammarParser.TimerangeContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(stlgrammarParser.T__4)
            self.state = 103
            self.start_t()
            self.state = 104
            self.match(stlgrammarParser.T__5)
            self.state = 105
            self.end_t()
            self.state = 106
            self.match(stlgrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImpliesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_implies

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplies" ):
                listener.enterImplies(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplies" ):
                listener.exitImplies(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImplies" ):
                return visitor.visitImplies(self)
            else:
                return visitor.visitChildren(self)




    def implies(self):

        localctx = stlgrammarParser.ImpliesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_implies)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(stlgrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stlgrammarParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(stlgrammarParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntExpr" ):
                listener.enterIntExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntExpr" ):
                listener.exitIntExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntExpr" ):
                return visitor.visitIntExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlgrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(stlgrammarParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParensExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(stlgrammarParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParensExpr" ):
                listener.enterParensExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParensExpr" ):
                listener.exitParensExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParensExpr" ):
                return visitor.visitParensExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stlgrammarParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stlgrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(stlgrammarParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


